--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 :root {
    --branco: #ffffff;
    --cinza: #f2f2f2;
+   --verdeclaro: #9add4c;
    --verde:#9CD439;
    --verdeescuro:#337029;
    --preto:#000;
