--- a/css/cases.css
+++ b/css/cases.css
@@ -12,7 +12,7 @@
     .div3 { grid-area: 4 / 2 / 5 / 5; }
     .div4 { grid-area: 5 / 2 / 6 / 5; }
 
-
+   
 .texto-do-cases{
     text-align: center;
     margin-bottom: 15px;
@@ -28,7 +28,7 @@
     max-width: 100%;
 	padding: 50px 50px 50px 50px;
 
-    background: linear-gradient(-45deg, #24dd13, #21e221, #1ba817, #1d8b13);
+    background: linear-gradient(-45deg, var(--verde), var(--verdeescuro), var(--verdeclaro));
     background-size: 400% 400%;
     animation: gradient 6.5s ease infinite;
 
@@ -36,19 +36,21 @@
 /* DEGRADE DE COR */
 @keyframes gradient {
   0% {
-    background-position: 0% 50%;
+    background-position: 0% 60%;
   }
   50% {
-    background-position: 100% 50%;
+    background-position: 100% 70%;
   }
   100% {
     background-position: 0% 50%;
   }
 }
 /* CORRIGIR OS TEXTOS */
-#fonte-texto{
+.fonte-texto{
     font-size: 45px;
+    color:#f2f2f2;
 }
 h6{
     margin-top: 15px;
+    color:#f2f2f2;
 }
