--- a/css/contato.css
+++ b/css/contato.css
@@ -1,9 +1,10 @@
-#mapa {
+.mapa {
 
     margin-top: 5%;
       width: 50%;
       height: 300px;
-      float: left;
+      z-index: 1;
+      margin-top:9%;
   }
   article{
     padding: 2%;
@@ -12,8 +13,11 @@
     margin-top: 5%;
     width: 50%;
     height: 300px;
-    float: right;
+   margin-top:-23%;
+   margin-left:50%;
+   margin-bottom: 20%;
   }
+
   .container-fluid{
     display: block;
     max-width: 100%;
