--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 
 
 body{
-  background-color:var(--cinza);
+  background-color: var(--cinza);
 }
 
 h2{
@@ -98,7 +98,7 @@ margin-bottom: 20px;
 .nav-link{
 	color: #212121 !important;
 	font-weight: 500;
-    transition: all 200ms linear;
+  transition: all 200ms linear;
 }
 
 #quem-somos,#clientes{
@@ -127,7 +127,7 @@ color:#212121 ;
 }
 .nav-item:after{
 	position: absolute;
-	bottom: -5px;
+	bottom: -8px;
 	left: 0;
 	width: 100%;
 	height: 2px;
@@ -1038,47 +1038,22 @@ footer .botao:hover::after, .botao:hover::after{
   }
 
 
-
-.dropbtn {
-  color: #337029;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-}
-
-.dropdown {
-  position: relative;
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #3d3636;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-  border-radius: 20px;
-  list-style: none;
-}
-
-.dropdown-content a {
-  color: rgb(255, 255, 255);
-  padding: 12px 16px;
-  text-decoration: none;
+/*Dropdown do contato*/
+.nested,.dropdown:hover .dropdown-menu {
   display: block;
 }
 
-.dropdown-content a:hover {background-color: #ddd;border-radius: 10px;}
+.dropdown-item:hover{
+  color:var(--verdeescuro);
+  background-color:#3270291f;
 
-.dropdown:hover .dropdown-content {display: block;}
-
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
-
+}
+.dropdown-item{font-weight: 500;}
 
 
+/*Politicas de privacidade*/
 #okCookie{
-  background-color:#634545b7;
+  background-color:#0a0202b7;
   color:#fdfdfd;
   position:fixed;
   bottom:0;
