--- a/css/trabalhe.css
+++ b/css/trabalhe.css
@@ -1,10 +1,15 @@
-.teste{
+.parent {
+    display: grid;
+    grid-template-columns: 0.25fr 1fr repeat(2, 0fr) 0.1fr;
+    grid-template-rows: repeat(3, 0.3fr) repeat(2, 0fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 2px;
+    }
+    
+    .div1 { grid-area: 2 / 2 / 3 / 3;}
+    .div2 { grid-area: 3 / 2 / 4 / 3; }
 
-    width: 16%;
-
-}
-
-.teste2{
-width: 20%;
-height: 10%;
-}
+    h1{
+        font-size: large;
+        margin-top: 20px;
+    }
